# Velocity-Downloader

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
scripts/: create-latest-json.mjs
src/: App.tsx  index.css  main.tsx  native-ui.css  types.ts  utils.ts  windowPlacement.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: commands.rs  engine.rs  lib.rs  main.rs  manager.rs  media.rs  models.rs  native_main.rs  native_messaging.rs  server.rs  state.rs
src-tauri/ui/: native_main.slint
src/components/: AddDownloadWindow.tsx  BatchDownloadWindow.tsx  DownloadItem.tsx  DownloadWindow.tsx  ExtensionInstaller.tsx  SettingsPanel.tsx
