[package]
name = "velocity-downloader"
version = "0.1.0"
description = "A high-performance multi-threaded download manager"
authors = ["you"]
edition = "2021"

[lib]
name = "velocity_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "cookies"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6"
urlencoding = "2"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true
strip = true
